example.yml
---
# see https://kubernetes.io/docs/concepts/services-networking/ingress/
# see https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#ingress-v1-networking-k8s-io
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
spec:
  rules:
    - host: example.example.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example
                port:
                  name: web
---
# see https://kubernetes.io/docs/concepts/services-networking/service/#type-clusterip
# see https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#service-v1-core
# see https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#serviceport-v1-core
apiVersion: v1
kind: Service
metadata:
  name: example
spec:
  type: ClusterIP
  selector:
    app: example
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: web
---
# see https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
# see https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#deployment-v1-apps
# see https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#podtemplatespec-v1-core
# see https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#container-v1-core
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
    spec:
      enableServiceLinks: false
      containers:
        # see https://github.com/rgl/example-docker-buildx-go
        - name: example
          image: ruilopes/example-docker-buildx-go:v1.11.0
          args:
            - -listen=0.0.0.0:9000
          ports:
            - name: web
              containerPort: 9000
          resources:
            requests:
              memory: 20Mi
              cpu: '0.1'
            limits:
              memory: 20Mi
              cpu: '0.1'
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
