kubernetes-hello.yml
---
# see https://kubernetes.io/docs/concepts/services-networking/ingress/
# see https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.35/#ingress-v1-networking-k8s-io
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-hello
spec:
  rules:
    - host: kubernetes-hello.example.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-hello
                port:
                  name: web
---
# see https://kubernetes.io/docs/concepts/services-networking/service/#type-clusterip
# see https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.35/#service-v1-core
# see https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.35/#serviceport-v1-core
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-hello
spec:
  type: ClusterIP
  selector:
    app: kubernetes-hello
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: web
---
# see https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
# see https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.35/#deployment-v1-apps
# see https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.35/#podtemplatespec-v1-core
# see https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.35/#container-v1-core
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubernetes-hello
  template:
    metadata:
      labels:
        app: kubernetes-hello
    spec:
      serviceAccountName: kubernetes-hello
      enableServiceLinks: false
      securityContext:
        # NB this group id has to be the same as the container user group id(s)
        #    securityContext, which is inferred by k8s from the USER Dockerfile
        #    instruction.
        fsGroup: 65534
      containers:
        # see https://github.com/rgl/kubernetes-hello
        - name: kubernetes-hello
          image: zot.zot.svc.cluster.local:5000/ruilopes/kubernetes-hello:v0.0.202601313131
          ports:
            - name: web
              containerPort: 8000
          resources:
            requests:
              memory: 64Mi
              cpu: '0.5'
            limits:
              memory: 64Mi
              cpu: '0.5'
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: tokens
              readOnly: true
              mountPath: /var/run/secrets/tokens
      volumes:
        - name: tokens
          projected:
            sources:
              - serviceAccountToken:
                  path: example.com-jwt.txt
                  audience: example.com
                  # NB the kubelet will periodically rotate this token.
                  # NB the token is rotated when its older than 80% of its time
                  #    to live or if the token is older than 24h.
                  # NB in production, set to a higher value (e.g. 3600 (1h)).
                  # NB the minimum allowed value is 600 (10m).
                  # NB this is equivalent of using the TokenRequest API.
                  #    see https://kubernetes.io/docs/reference/kubernetes-api/authentication-resources/token-request-v1/
                  # NB this is equivalent of executing:
                  #       kubectl create token kubernetes-hello --audience example.com --duration 600s
                  #    see https://kubernetes.io/docs/reference/kubectl/generated/kubectl_create/kubectl_create_token/
                  expirationSeconds: 600
